<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <Button
        android:id="@+id/button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_b"
        android:onClick="onClickB"
        app:layout_constraintBottom_toBottomOf="@+id/button_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_a" />

    <Button
        android:id="@+id/button_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/button_a"
        android:onClick="onClickA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_c"
        android:onClick="onClickC"
        app:layout_constraintBottom_toBottomOf="@+id/button_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_b"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/button_d"
        android:onClick="onClickD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_e"
        android:onClick="onClickE"
        app:layout_constraintBottom_toBottomOf="@+id/button_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_d" />

    <Button
        android:id="@+id/button_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_f"
        android:onClick="onClickF"
        app:layout_constraintBottom_toBottomOf="@+id/button_e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_e"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="34dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/text_to_change"
        app:layout_constraintEnd_toEndOf="@+id/button_f"
        app:layout_constraintStart_toStartOf="@+id/button_d"
        app:layout_constraintTop_toBottomOf="@+id/button_e" />

</androidx.constraintlayout.widget.ConstraintLayout>
